update mail and resolve x-overflow

--- a/css/index.css
+++ b/css/index.css
@@ -29,10 +29,9 @@ body > img{
 }
 
 html{
-
+    overflow-x: hidden;
     margin: 0;
     padding: 0;
-    overflow-x:unset;
 }
 
 .bold-text {
